--- a/src/components/BtnsBoard/Style.scss
+++ b/src/components/BtnsBoard/Style.scss
@@ -41,7 +41,9 @@
     padding: 15px 30px;
     transform-origin: right top;
     border-radius: 30px;
-
+    @media (max-width: 500px) {
+        width: 300px;
+    }
     .board_title {
         color: #ffffff82;
     }
@@ -61,6 +63,10 @@
             padding: 30px;
             border-radius: 12px;
             cursor: pointer;
+            @media (max-width: 500px) {
+                padding: 16px;
+            }
+
         }
 
         .mood_type.active {
@@ -94,8 +100,12 @@
             display: grid;
             grid-template-columns: 32% 68%;
             padding: 10px 0;
-
+          
             p {
+                @media (max-width: 500px) {
+                font-size: 12px;
+                }
+
                 color: #ffffff;
                 text-wrap: nowrap;
             }
