--- a/src/components/Rain/Style.scss
+++ b/src/components/Rain/Style.scss
@@ -21,6 +21,7 @@
       justify-content: center;
       align-items: center;
       transition: 0.3s; 
+      cursor: pointer;
   
       &:active {
         box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2) !important;
