--- a/src/components/footer/Style.scss
+++ b/src/components/footer/Style.scss
@@ -11,4 +11,10 @@
         font-family: 'Poppins', sans-serif;   
         font-size: 14px;
     }
+
+
+    a{
+        text-decoration: underline;
+        color: #fff !important;
+    }
 }
