--- a/src/components/BtnsBoard/Style.scss
+++ b/src/components/BtnsBoard/Style.scss
@@ -41,9 +41,15 @@
     padding: 15px 30px;
     transform-origin: right top;
     border-radius: 30px;
+
     @media (max-width: 500px) {
         width: 300px;
+        right: 48%;
+        top: -77%;
+        z-index: 111;
+
     }
+
     .board_title {
         color: #ffffff82;
     }
@@ -63,6 +69,7 @@
             padding: 30px;
             border-radius: 12px;
             cursor: pointer;
+
             @media (max-width: 500px) {
                 padding: 16px;
             }
@@ -100,10 +107,10 @@
             display: grid;
             grid-template-columns: 32% 68%;
             padding: 10px 0;
-          
+
             p {
                 @media (max-width: 500px) {
-                font-size: 12px;
+                    font-size: 12px;
                 }
 
                 color: #ffffff;
